# trabalho-3-taleshrocha

./: CMakeLists.txt  Makefile  README.md  README.org  cp2feedback.md
data/: maze-set.txt  maze1.txt  maze2.txt  maze3.txt  maze4.txt  maze5.txt
include/: Level.h  Player.h  Snake.h  SnakeGame.h
src/: Level.cpp  Player.cpp  Snake.cpp  SnakeGame.cpp  Snaze.cpp
